compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__duplicate_param@valid.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo(x: Int32, y: Int32) { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Function(
            FunctionDefinition {
                id: ItemId {
                    package: PackageId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "foo",
                            location: <internal>:3:6,
                        },
                        type_arguments: [],
                        location: <internal>:3:6,
                    },
                    location: <internal>:3:6,
                },
                parameters: [
                    Parameter {
                        index: 0,
                        name: Identifier {
                            name: "x",
                            location: <internal>:7:8,
                        },
                        param_type: Type {
                            id: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    6143724420395906933,
                                ),
                            },
                            name: Path {
                                root: [
                                    Namespace {
                                        name: Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    },
                                ],
                                name: Type {
                                    name: Identifier {
                                        name: "Int32",
                                        location: <internal>:10:15,
                                    },
                                    type_arguments: [],
                                    location: <internal>:10:15,
                                },
                                location: <internal>:10:15,
                            },
                            location: <internal>:10:15,
                        },
                        vararg: false,
                        location: <internal>:7:15,
                    },
                    Parameter {
                        index: 1,
                        name: Identifier {
                            name: "y",
                            location: <internal>:17:18,
                        },
                        param_type: Type {
                            id: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    6143724420395906933,
                                ),
                            },
                            name: Path {
                                root: [
                                    Namespace {
                                        name: Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    },
                                ],
                                name: Type {
                                    name: Identifier {
                                        name: "Int32",
                                        location: <internal>:20:25,
                                    },
                                    type_arguments: [],
                                    location: <internal>:20:25,
                                },
                                location: <internal>:20:25,
                            },
                            location: <internal>:20:25,
                        },
                        vararg: false,
                        location: <internal>:17:25,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Void",
                                location: <internal>:0:0,
                            },
                            type_arguments: [],
                            location: <internal>:0:0,
                        },
                        location: <internal>:0:0,
                    },
                    location: <internal>:0:0,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:27:30,
                    },
                ),
                location: <internal>:0:30,
            },
        ),
    },
    statements: {},
    expressions: {},
}
