compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__enum_snapshots@empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "enum Foo {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Enum(
                EnumDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:5:8,
                            },
                            type_arguments: [],
                            location: <internal>:5:8,
                        },
                        location: <internal>:5:8,
                    },
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    visibility: Private,
                    cases: [],
                    location: <internal>:0:11,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
