compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__enum_snapshots@multiple_variants.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "enum Foo { Bar, Baz }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            5175167619020667705,
        ): Type(
            Enum(
                EnumDefinition {
                    id: ItemId(
                        5175167619020667705,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:5:8,
                            },
                            type_arguments: [],
                            location: <internal>:5:8,
                        },
                        location: <internal>:5:8,
                    },
                    visibility: Private,
                    cases: [
                        EnumDefinitionCase {
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "Bar",
                                        location: <internal>:11:14,
                                    },
                                    type_arguments: [],
                                    location: <internal>:11:14,
                                },
                                location: <internal>:11:14,
                            },
                            parameters: [],
                            location: <internal>:11:14,
                        },
                        EnumDefinitionCase {
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "Baz",
                                        location: <internal>:16:19,
                                    },
                                    type_arguments: [],
                                    location: <internal>:16:19,
                                },
                                location: <internal>:16:19,
                            },
                            parameters: [],
                            location: <internal>:16:19,
                        },
                    ],
                    location: <internal>:0:21,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
