compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__enum_snapshots@multiple_variants_multiple_params.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            enum Foo {\n                Bar(int, int),\n                Baz(int, int)\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            12314200219861369160,
        ): Type(
            Enum(
                EnumDefinition {
                    id: ItemId(
                        12314200219861369160,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "Foo",
                                location: <internal>:18:21,
                            },
                        ),
                        location: <internal>:18:21,
                    },
                    cases: [
                        EnumDefinitionCase {
                            name: SymbolName {
                                namespace: None,
                                name: Named(
                                    Identifier {
                                        name: "Bar",
                                        location: <internal>:40:43,
                                    },
                                ),
                                location: <internal>:40:43,
                            },
                            parameters: [
                                Type {
                                    id: ItemId(
                                        4873327510373585985,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "int",
                                                location: <internal>:44:47,
                                            },
                                        ),
                                        location: <internal>:44:47,
                                    },
                                    type_params: [],
                                    location: <internal>:44:47,
                                },
                                Type {
                                    id: ItemId(
                                        4873327510373585985,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "int",
                                                location: <internal>:49:52,
                                            },
                                        ),
                                        location: <internal>:49:52,
                                    },
                                    type_params: [],
                                    location: <internal>:49:52,
                                },
                            ],
                            location: <internal>:40:53,
                        },
                        EnumDefinitionCase {
                            name: SymbolName {
                                namespace: None,
                                name: Named(
                                    Identifier {
                                        name: "Baz",
                                        location: <internal>:71:74,
                                    },
                                ),
                                location: <internal>:71:74,
                            },
                            parameters: [
                                Type {
                                    id: ItemId(
                                        4873327510373585985,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "int",
                                                location: <internal>:75:78,
                                            },
                                        ),
                                        location: <internal>:75:78,
                                    },
                                    type_params: [],
                                    location: <internal>:75:78,
                                },
                                Type {
                                    id: ItemId(
                                        4873327510373585985,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "int",
                                                location: <internal>:80:83,
                                            },
                                        ),
                                        location: <internal>:80:83,
                                    },
                                    type_params: [],
                                    location: <internal>:80:83,
                                },
                            ],
                            location: <internal>:71:84,
                        },
                    ],
                    location: <internal>:13:98,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
