compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__enum_snapshots@variant_param_multiple.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            enum Foo {\n                Bar(int, int)\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            5175167619020667705,
        ): Type(
            Enum(
                EnumDefinition {
                    id: ItemId(
                        5175167619020667705,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:18:21,
                            },
                            type_arguments: [],
                            location: <internal>:18:21,
                        },
                        location: <internal>:18:21,
                    },
                    visibility: Private,
                    cases: [
                        EnumDefinitionCase {
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "Bar",
                                        location: <internal>:40:43,
                                    },
                                    type_arguments: [],
                                    location: <internal>:40:43,
                                },
                                location: <internal>:40:43,
                            },
                            parameters: [
                                Type {
                                    id: ItemId(
                                        7468397361300629741,
                                    ),
                                    name: Path {
                                        root: [],
                                        name: Namespace {
                                            name: Identifier {
                                                name: "int",
                                                location: <internal>:44:47,
                                            },
                                        },
                                        location: <internal>:44:47,
                                    },
                                    location: <internal>:44:47,
                                },
                                Type {
                                    id: ItemId(
                                        7468397361300629741,
                                    ),
                                    name: Path {
                                        root: [],
                                        name: Namespace {
                                            name: Identifier {
                                                name: "int",
                                                location: <internal>:49:52,
                                            },
                                        },
                                        location: <internal>:49:52,
                                    },
                                    location: <internal>:49:52,
                                },
                            ],
                            location: <internal>:40:53,
                        },
                    ],
                    location: <internal>:13:67,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
