compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn main() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            8095934718272011788,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    8095934718272011788,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Identifier {
                        name: "main",
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        id: ItemId(
                            9344623788042179276,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Identifier {
                                name: "void",
                                location: <internal>:13:17,
                            },
                            location: <internal>:13:17,
                        },
                        type_params: [],
                        location: <internal>:13:17,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:18:20,
                    },
                ),
                location: <internal>:0:20,
            },
        ),
    },
    statements: {},
    expressions: {},
}
